# Barasona

./: Cargo.toml  LICENSE  README.md  barasona-essentials.md
src/: barasona.rs  config.rs  error.rs  lib.rs  metrics.rs  network.rs  storage.rs
src/core/: admin.rs  append_entries.rs  client.rs  install_snapshot.rs  mod.rs  replication.rs  vote.rs
src/replication/: mod.rs
