[package]
name = "barasona"
version = "0.1.0"
edition = "2018"
authors = ["Ricardo Pallas <rpallas92@gmail.com>"]
categories = ["algorithms", "asynchronous", "data-structures", "distributed-systems"]
description = "An async implementation of the Barasona distributed replication protocol."
homepage = "https://github.com/rpallas92/Barasona"
keywords = ["barasona", "replication", "data-storage"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rpallas92/Barasona"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.36"
derive_more = { version="0.99.9", default-features=false, features=["from"] }
futures = "0.3"
log = "0.4.6"
rand = "0.8.5"
serde = { version="1", features=["derive"] }
thiserror = "1.0"
tokio = { version="1.0", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2.4"


